--- a/style.css
+++ b/style.css
@@ -47,3 +47,11 @@ body {
   padding: 5px;
   margin: 5px;
 }
+
+.correctAnswer {
+  background-color: rgb(186, 186, 24);
+}
+
+.correctAnswer {
+  background-color: rgb(221, 64, 56);
+}
